--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,700;1,200&display=swap');
+
+:root {
+  --bg-color-light: #ffbead;
+  --box-shadow-light: 6px 6px 12px #d9a293, 
+                      -6px -6px 12px #ffdbc7;
+  --box-shadow-light-inverse: inset 6px 6px 12px #d9a293, 
+                              inset -6px -6px 12px #ffdbc7;
+  --font-color-light: black;
+
+  --bg-color-dark: #3d0035;
+  --box-shadow-dark: 8px 8px 16px #34002d, 
+                      -8px -8px 16px #46003d;
+  --box-shadow-dark-inverse: inset 8px 8px 16px #34002d, 
+                              inset -8px -8px 16px #46003d;
+  --font-color-dark: white;
+
+  --font-stack: 'Josefin Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: var(--font-stack);
+  background-color: var(--bg-color-light);
+  color: var(--font-color-light)
 }
+
+
