--- a/src/Letter.css
+++ b/src/Letter.css
@@ -1,4 +1,4 @@
-.letter-box {
+.letter-box-light {
   box-shadow: var(--box-shadow-light);
   height: 3rem;
   width: 3rem;
@@ -9,8 +9,31 @@
   margin: 10px 10px;
 }
 
-.letter-box-clicked {
+.letter-box-dark {
+  box-shadow: var(--box-shadow-dark);
+  height: 3rem;
+  width: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px;
+}
+
+.letter-box-clicked-light {
   box-shadow: var(--box-shadow-light-inverse);
+  height: 3rem;
+  width: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px;
+  opacity: 0.3;
+}
+
+.letter-box-clicked-dark {
+  box-shadow: var(--box-shadow-dark-inverse);
   height: 3rem;
   width: 3rem;
   display: flex;
