--- a/src/Settings.css
+++ b/src/Settings.css
@@ -1,9 +1,15 @@
-.settings-modal {
+.settings-modal-light {
   margin: 10px 10px;
   padding: 10px 10px;
-  box-shadow: 6px 6px 12px #d9a293, 
-  -6px -6px 12px #ffdbc7;
-  height: 60vh;
+  box-shadow: var(--box-shadow-light);
+  height: 100vh;
+}
+
+.settings-modal-dark {
+  margin: 10px 10px;
+  padding: 10px 10px;
+  box-shadow: var(--box-shadow-dark);
+  height: 100vh;
 }
 
 h1 {
