--- a/src/Word.css
+++ b/src/Word.css
@@ -1,7 +1,15 @@
-.word-box {
+.word-box-light {
   max-width: 700px;
   padding: 5px 50px;
   margin-bottom: 2vh;
   box-shadow: var(--box-shadow-light);
+  border-radius: 10px;
+}
+
+.word-box-dark {
+  max-width: 700px;
+  padding: 5px 50px;
+  margin-bottom: 2vh;
+  box-shadow: var(--box-shadow-dark);
   border-radius: 10px;
 }
