--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ footer {
     width: 100%;
 }
 
-footer button {
+#button-light {
   background: none;
   border: solid 1px rgba(122, 122, 122, 0.5);
   padding: 1.5rem;
@@ -89,8 +89,25 @@ footer button {
   font-size: 1.2rem;
   margin: 1rem 0;
   border-radius: 5px;
+  color: var(--font-color-light)
 }
 
-footer button:hover {
+#button-light:hover {
+  border: solid 1px rgba(255, 255, 255, 1);
+  
+} 
+
+#button-dark {
+  background: none;
+  border: solid 1px rgba(122, 122, 122, 0.5);
+  padding: 1.5rem;
+  font-family: var(--font-stack);
+  font-size: 1.2rem;
+  margin: 1rem 0;
+  border-radius: 5px;
+  color: var(--font-color-dark)
+}
+
+#button-dark:hover {
   border: solid 1px rgba(255, 255, 255, 1);
 } 
