--- a/src/Definition.css
+++ b/src/Definition.css
@@ -15,3 +15,9 @@
   font-style: italic;
   font-weight: 100;
 }
+
+#part-of-speech {
+  margin-bottom: 0;
+  padding-bottom: -5px;
+  margin-top: 3rem;
+}
