--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,66 @@ footer {
 #button-dark:hover {
   border: solid 1px rgba(255, 255, 255, 1);
 } 
+
+.success {
+  background-color: rgba(69, 240, 39, 0.411);
+  padding: 2rem;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.failure {
+  color: black;
+  background-color: rgba(255, 53, 53, 0.411);
+  padding: 2rem;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.scoreboard-light {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: -2rem;
+  margin-bottom: 2rem;
+  box-shadow: var(--box-shadow-light-inverse);
+  padding: 0.2rem 2rem;
+}
+
+.scoreboard-dark {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: -2rem;
+  margin-bottom: 2rem;
+  box-shadow: var(--box-shadow-dark-inverse);
+  padding: 0.2rem 2rem;
+}
+
+.scoreboard-light div {
+  margin: 0px 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+ 
+.scoreboard-light div h4 {
+  margin-bottom: 0px;
+}
+
+
+.scoreboard-dark div {
+  margin: 0px 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.scoreboard-dark div h4 {
+  margin-bottom: 0px;
+}
+
