--- a/src/Letter.css
+++ b/src/Letter.css
@@ -1,5 +1,7 @@
 .letter-box-light {
   box-shadow: var(--box-shadow-light);
+  background-color: var(--bg-color-light);
+  border: none;
   height: 3rem;
   width: 3rem;
   display: flex;
@@ -9,8 +11,20 @@
   margin: 10px 10px;
 }
 
+.letter-box-light:focus {
+  border: none;
+  outline: none;
+}
+
+.letter-box-light:hover {
+  border: solid 1px white;
+}
+
 .letter-box-dark {
   box-shadow: var(--box-shadow-dark);
+  background-color: var(--bg-color-dark);
+  color: white;
+  border: none;
   height: 3rem;
   width: 3rem;
   display: flex;
@@ -18,6 +32,15 @@
   justify-content: center;
   align-items: center;
   margin: 10px 10px;
+}
+
+.letter-box-dark:focus {
+  border: none;
+  outline: none;
+}
+
+.letter-box-dark:hover {
+  border: solid 1px white;
 }
 
 .letter-box-clicked-light {
