--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 nav {
-  width: 100%;
+  /* width: 100%; */
   padding: 10px 20px;
   margin-bottom: 5vh;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-top: 1vh
 }
 
 nav h1 {
@@ -26,7 +25,7 @@ nav div {
 }
 
 footer {
-  height: 10vh;
+  height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
